--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/vim/bundle/Vundle.vim"]
 	path = vim/vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "vim/vim/bundle/gundo.vim"]
+	path = vim/vim/bundle/gundo.vim
+	url = https://github.com/sjl/gundle.vim.git
