--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "prezto"]
-	path = prezto
-	url = git@github.com:nicktate/prezto
-	branch = overlay/nick
+[submodule "pure"]
+	path = pure
+	url = https://github.com/sindresorhus/pure.git
